--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/xplane_sdk"]
 	path = external/xplane_sdk
-	url = git@github.com:Hopobcn/xplane_sdk.git
+	url = https://github.com/Hopobcn/xplane_sdk.git
